--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank">GitHub</a>
+                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank"><img src="imagens/instagram.png" alt="Logo do Instagram">Instagram</img></a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="imagens/github.png" alt="Logo do GitHub">GitHub</img></a>
             </div>
         </section>
         <img src="/imagens/Imagem.png" alt="Foto da Joana Santos programando" class="imagem">
