--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </section>
         <img src="/imagens/Imagem.png" alt="Foto da Joana Santos programando" class="imagem">
     </main>
-    <footer>
-
+    <footer class="rodape">
+        <p>Desenvolvido por Lorenzo</p>
     </footer>
 </body>
 </html>
