--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Alura</title>
-    <link rel="stylesheet" href="/estilos/reset.css">
-    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a href="index.html" class="cabecalho__menu__links">Home</a>
+            <a href="#" class="cabecalho__menu__links">Sobre mim</a>
+        </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
@@ -23,11 +26,11 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank"><img src="imagens/instagram.png" alt="Logo do Instagram">Instagram</img></a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="imagens/github.png" alt="Logo do GitHub">GitHub</img></a>
+                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank"><img src="assets/instagram.png" alt="Logo do Instagram">Instagram</img></a>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="assets/github.png" alt="Logo do GitHub">GitHub</img></a>
             </div>
         </section>
-        <img src="/imagens/Imagem.png" alt="Foto da Joana Santos programando" class="imagem">
+        <img src="/assets/Imagem.png" alt="Foto da Joana Santos programando" class="imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lorenzo</p>
