--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a href="index.html" class="cabecalho__menu__links">Home</a>
-            <a href="#" class="cabecalho__menu__links">Sobre mim</a>
+            <a href="about.html" class="cabecalho__menu__links">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
