--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="assets/github.png" alt="Logo do GitHub">GitHub</img></a>
             </div>
         </section>
-        <img src="/assets/Imagem.png" alt="Foto da Joana Santos programando" class="imagem">
+        <img src="/assets/Imagem.png" alt="Foto da Joana Santos programando" class="apresentacao__imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lorenzo</p>
