--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
+                <p class="apresentacao__conteudo__texto"><strong>Acessa minhas redes socias:</strong></p>
                 <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank"><img src="assets/instagram.png" alt="Logo do Instagram">Instagram</img></a>
                 <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="assets/github.png" alt="Logo do GitHub">GitHub</img></a>
             </div>
