--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam officiis consequatur illum repellendus ducimus nam cumque dolorem earum, obcaecati maiores accusamus, quas laborum? Illo officiis quisquam quod minus architecto error. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam voluptatem consectetur libero eveniet? Ducimus veniam, quisquam laudantium consequuntur labore mollitia aliquid quia provident maiores sunt laboriosam exercitationem aperiam nulla cumque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, repellendus inventore provident dolore dolor accusamus ducimus quaerat optio quibusdam? Fugit sapiente ex quas quis inventore quia quod tempora est blanditiis.</p>
             <p class="apresentacao__conteudo__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eligendi eaque. Accusantium nisi, doloremque hic quidem ea ipsum dolorum corrupti iusto molestiae cum eum facere voluptates saepe quibusdam sint consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nobis consequatur ducimus quas a exercitationem qui impedit corporis eum animi! Aliquam consequuntur nobis, aperiam inventore modi molestiae vel asperiores praesentium.</p>
         </section>
-        <img src="/assets/Imagem.png" alt="Foto da Joana Santos programando" class="apresentacao__imagem">
+        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando" class="apresentacao__imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lorenzo</p>
